crates/ars-components/src/input/textarea/snapshots/ars_components__input__textarea__tests__textarea_root_focused_keyboard.snap
---
source: crates/ars-components/src/input/textarea/mod.rs
expression: "snapshot_attrs(&focused.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "focused",
            ),
        ),
        (
            Id,
            String(
                "bio-field",
            ),
        ),
    ],
    styles: [],
}
