crates/ars-components/src/input/textarea/snapshots/ars_components__input__textarea__tests__textarea_root_idle.snap
---
source: crates/ars-components/src/input/textarea/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "textarea",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "bio-field",
            ),
        ),
    ],
    styles: [],
}
